openspec/changes/archive/2026-04-26-extend-no-std-foundation-and-wire/evidence/ui-directory-layer-std-without-layer.stderr
error[E0432]: unresolved import `aspen_core::DirectoryLayer`
   --> src/main.rs:1:5
    |
  1 | use aspen_core::DirectoryLayer;
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^ no `DirectoryLayer` in the root
    |
note: found an item that was configured out
   --> $REPO_ROOT/crates/aspen-core-shell/src/lib.rs:149:16
    |
148 | #[cfg(feature = "layer")]
    |       ----------------- the item is gated behind the `layer` feature
149 | pub use layer::DirectoryLayer;
    |                ^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0432`.
error: could not compile `ui-directory-layer-std-without-layer` (bin "ui-directory-layer-std-without-layer") due to 1 previous error
